@startuml
class CommandWrapper {
    -_dto: any
    -_service: any
    +Service: any
    +DTO: any
    +Response: boolean
    +Arguments: any[]
    +Type: Guid
    +Id: Guid
    +getArgument(name: string): any
    +setArgument(name: string, value: string): void
    +executeCmd(): Promise<any>
    -{static} _factories: any
    +{static} register(typeId: Guid, factory: CommandWrapperFactory): void
}
class PropertyDTO {
    +Name?: string
    +Value?: any
    +{static} TypeId: Guid
}
class BaseDTO {
    +Id?: string
    +Type?: string
    +{static} TypeId: Guid
}
class CommandDTO extends BaseDTO {
    +Response?: boolean
    +Arguments?: PropertyDTO[]
    +{static} TypeId: Guid
}
class SampleCommandBase extends CommandWrapper {
    +FirstOne: string
    +FirstOne: string
    +SecondOne: boolean
    +SecondOne: boolean
    +execute(firstOne: string, secondOne: boolean): Promise<void>
    +{static} TypeId: Guid
    +{static} IsForMe(dto: CommandDTO): any
}
CommandDTO --> "*" PropertyDTO
SampleCommandBase --> "1" CommandDTO
@enduml